--- a/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="ProcessDesigner">
+<html ng-app="Explanation">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=8" />
     <meta charset="utf-8" />
