Substantial reworking of submission, addition of some basic caching

--- a/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
@@ -33,7 +33,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <h1><i class="icon-tasks icon-1x"></i> Error</h1>
+                <h1><i class="icon-tasks icon-1x"></i> Exception</h1>
             </div>
         </div>
     </div>
