--- a/web/src/main/webapp/static/ng/views/form.html
+++ b/web/src/main/webapp/static/ng/views/form.html
@@ -44,7 +44,7 @@
     <wf-notifications notifications="notifications"></wf-notifications>
     <h2>{{container.title}}</h2>
     <wf-status form="form"></wf-status>
-    <form ng-class="state.isViewingAttachments && 'col-md-8'" class="form form-default" action="{{form.action}}" method="POST" enctype="multipart/form-data">
+    <form ng-class="state.isViewingAttachments && 'col-md-8'" class="form form-default" action="{{form.action}}" method="POST" enctype="multipart/form-data" novalidate="novalidate">
         <div class="row">
             <div class="screen" id="{{container.containerId}}">
                 <wf-fieldset form="form" container="container"></wf-fieldset>
@@ -63,7 +63,7 @@
         <div data-ng-switch-when="checkbox">
             <div class="checkbox" data-ng-repeat="option in field.options">
                 <label>
-                    <input data-ng-change="onFieldChange(field)" data-ng-model="option.value" data-ng-disabled="{{!field.editable}}" data-ng-checked="isCheckboxChecked(field, option)" data-ng-readonly="field.readonly" data-ng-required="{{field.required}}" name="{{field.name}}" value="{{option.value}}" type="checkbox"> {{option.label}}
+                    <input  data-ng-disabled="{{!field.editable}}" data-ng-checked="isCheckboxChecked(field, option)" data-ng-readonly="field.readonly" data-ng-required="{{field.required}}" data-ng-true-value="{{option.value}}" name="{{field.name}}" value="{{option.value}}" type="checkbox"> {{option.label}}
                 </label>
             </div>
         </div>
