--- a/web/src/main/webapp/static/ng/views/form-list.html
+++ b/web/src/main/webapp/static/ng/views/form-list.html
@@ -159,10 +159,11 @@
                                         <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu form-inline" role="menu" aria-labelledby="process-definition-button">
+                                        <li role="presentation" class="dropdown-header">Date range</li>
                                         <li data-ng-repeat="dateRangeKey in dates.dateRangeKeys" role="presentation">
                                             <div class="checkbox-menu-item" role="menuitem" tabindex="-1">
                                                 <label class="checkbox">
-                                                    <input type="checkbox" data-ng-change="dates.selectDateRange(dateRangeKey)" data-ng-model="dates.selectedDateRange" data-ng-true-value="{{dateRangeKey}}" role="menuitem" checked="dates.selectedDateRangeKey = dateRangeKey"/> &nbsp;{{dates.dateRanges[dateRangeKey]}}
+                                                    <input type="checkbox" data-ng-change="dates.selectDateRange(dateRangeKey)" data-ng-model="dates.selectedDateRange" data-ng-true-value="{{dateRangeKey}}" role="menuitem" checked="dates.selectedDateRangeKey == dateRangeKey"/> &nbsp;{{dates.dateRanges[dateRangeKey]}}
                                                 </label>
                                             </div>
                                         </li>
@@ -178,7 +179,7 @@
                     <button data-ng-click="dialogs.openActivateModal(getFormsSelected(['Suspended']))" data-ng-show="isFormSelected(['Suspended'])" class="btn btn-default navbar-btn" id="activate-dialog-button" title="Activate process" type="button"><i class="fa fa-play fa-white"></i></button>
                     <button data-ng-click="dialogs.openSuspendModal(getFormsSelected(['Open']))" data-ng-show="isFormSelected(['Open'])" class="btn btn-default navbar-btn" id="suspend-dialog-button" title="Suspend process" type="button"><i class="fa fa-pause fa-white"></i></button>
                     <button data-ng-click="dialogs.openCancelModal(getFormsSelected(['Open','Suspended']))" data-ng-show="isFormSelected(['Open','Suspended'])" class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" title="Cancel process" type="button"><i class="fa fa-trash-o fa-white"></i></button>
-                    <button data-ng-click="dialogs.openRestartModal(getFormsSelected(['Cancelled', 'Completed']))" data-ng-show="isFormSelected(['Cancelled', 'Completed'])" class="btn btn-default navbar-btn" title="Restart process" type="button"><i class="fa fa-rotate-left"></i></button>
+                    <button data-ng-click="dialogs.openRestartModal(getFormsSelected(['Cancelled', 'Complete']))" data-ng-show="isFormSelected(['Cancelled', 'Complete'])" class="btn btn-default navbar-btn" title="Restart process" type="button"><i class="fa fa-rotate-left"></i></button>
                     <button data-ng-click="exportCsv(getFormsSelected())" data-ng-show="!isFormSelected()" data-ng-disabled="!isSingleProcessSelected()" class="btn btn-default navbar-btn" title="Export as CSV" type="button"><i class="fa fa-download"></i> Export</button>
                 </div>
             </div>
