Preliminary work for reporting screen

--- a/web/src/main/resources/META-INF/piecework/templates/Report.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Report.template.html
@@ -8,26 +8,19 @@
     <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href="../ui/form.html"/>
+    <base href="../ui/report.html"/>
     <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
-    <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
-    <script src="../static/js/vendor/jquery.inputmask.js"></script>
-    <script src="../static/js/vendor/moment.min.js"></script>
-    <script src="../static/js/vendor/jquery.iframe-transport.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload-process.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload-validate.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
-    <script src="../static/ng/js/form.js"></script>
+    <script src="../static/js/vendor/d3.js"></script>
+    <script src="../static/js/vendor/angular-charts.js"></script>
+    <script src="../static/ng/js/report.js"></script>
 </head>
-</head>
-<body role="application">
+<body role="application" keypress-events>
 <div data-ng-view>
 
 </div>
@@ -36,7 +29,7 @@
     <div class="navbar-inner">
         <ul>
             <li class="nav"></li>
-            <li class="nav pull-right"><h1 style="font-weight: normal;margin-right:20px">Workflow</h1></li>
+            <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
         </ul>
     </div>
 </div>
