Working on exception

--- a/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
@@ -25,7 +25,7 @@
     <script src="../static/ng/js/explanation.js"></script>
 </head>
 </head>
-<body role="application">
+<body wf-explanation role="application">
     <div class="navbar main-navbar">
         <div class="user-information">
             <div id="user-information-name" class="user-information-name pull-right">
